# pelican-medicina

./: README
src/: CMakeLists.txt  modules.cmake
src/adapters/: CMakeLists.txt  VisibilitiesAdapter.h
src/adapters/src/: VisibilitiesAdapter.cpp
src/adapters/test/: CMakeLists.txt  VisibilitiesAdapterTest.h
src/adapters/test/src/: VisibilitiesAdapterTest.cpp
src/apps/: CMakeLists.txt  serverMain.cpp
src/apps/test/: CMakeLists.txt
src/chunkers/: CMakeLists.txt  VisibilityChunker.h
src/chunkers/src/: VisibilityChunker.cpp
src/chunkers/test/: CMakeLists.txt  VisibilityChunkerTest.h
src/chunkers/test/src/: VisibilityChunkerTest.cpp
src/cmake/: compilerDefaults.cmake  dependencies.cmake
tools/: class  newpackage
